# senderkit-sdk-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
examples/: batch.py  celery_task.py  django_settings.py  send.py  send_async.py  webhook_fastapi.py  webhook_flask.py
src/senderkit/: __init__.py  _http.py  _serialize.py  _version.py  client.py  errors.py  models.py  webhooks.py
src/senderkit/integrations/: __init__.py  celery.py  fastapi.py  flask.py
src/senderkit/integrations/django/: __init__.py  backends.py  client.py  views.py
src/senderkit/resources/: __init__.py  messages.py  templates.py
tests/: conftest.py  helpers.py  test_batch.py  test_context.py  test_errors.py  test_messages.py  test_retries.py  test_send.py  test_send_raw.py  test_templates.py  test_timeout.py  test_webhooks.py
tests/integrations/: test_celery.py  test_django_backend.py  test_fastapi.py  test_flask.py
