[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "senderkit"
version = "0.1.0"
description = "Python SDK for SenderKit — send transactional email, SMS, push, and web-push."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SenderKit" }]
keywords = ["senderkit", "email", "sms", "push", "transactional", "notifications"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://senderkit.com"
Documentation = "https://docs.senderkit.com"
Source = "https://github.com/senderkit/senderkit-sdk-python"

[project.optional-dependencies]
django = ["django>=4.2"]
fastapi = ["fastapi>=0.100"]
flask = ["flask>=2.3"]
celery = ["celery>=5.3"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "django>=4.2",
    "fastapi>=0.100",
    "flask>=2.3",
    "celery>=5.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/senderkit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B904", "UP007", "UP045", "UP035", "UP006"]
